# vps-setup

./: .env.enc  .env.op.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/: renovate.json5
.github/linters/: .ansible-lint.yml  .megalinter.yml  .yamllint.yml
.github/workflows/: ci.yml
ansible/: .env.enc  ansible.cfg  example.inventory.ini  inventory.example.ini  playbook.yml
ansible/files/docker/: compose.yml
ansible/files/netdata/: netdata.conf
ansible/files/podman/: compose.yml
ansible/molecule/default/: converge.yml  molecule.yml  tests.yml  vars.yml
ansible/molecule/default/vars/: main.yml
ansible/tasks/: 1password_cli.yml  fail2ban.yml  netdata.yml  rclone.yml  ssh.yml  system_packages.yml  tailscale.yml  ufw.yml  unattended_upgrades.yml  user.yml
ansible/templates/1password/: 1password.sh.j2
ansible/templates/1password_cli/: 1password.sh.j2
ansible/templates/netdata/: claim.conf.j2  netdata.conf.j2
ansible/templates/rclone/: rclone.conf.j2
ansible/templates/ssh/: 00-vps-setup.conf.j2
ansible/tests/: 1password_cli_test.yml  fail2ban_test.yml  netdata_test.yml  rclone_test.yml  ssh_test.yml  system_packages_test.yml  tailscale_test.yml  ufw_test.yml  unattended_upgrades_test.yml  user_test.yml
docs/: tools.md
nixos-anywhere/: flake.nix  install.sh
terraform/: main.tf
